Layout fixes, suggested by Chrome.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,7 +14,7 @@
                 ->appendStylesheet('//netdna.bootstrapcdn.com/bootswatch/3.1.1/simplex/bootstrap.min.css')
                 ->appendStylesheet($this->baseUrl().'/css/site.css'); ?>
         <!-- Designed Fro BlackBerry 320px width - 8px scrollbar -->
-        <meta name="viewport" content="width=312; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
+        <meta name="viewport" content="width=312, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     </head>
     <body>
         <div class="container">
