--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -58,13 +58,12 @@
             
             if ($url['links']) {
                 $links = unserialize($url['links']);
-                if (strstr('.jpg', $links[0])) {
+                if (strstr($links[0], '.jpg')) {
                     $thumbnails = $links;
                 }
             }
     ?>
     <div class="col-md-12">
-        <div class="row">
         <?php foreach($thumbnails as $thumbnail): ?>
             <div class="col-lg-1 col-sm-2 col-xs-3">
                 <a class="thumbnail" href="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo renderpath($url['url'], $thumbnail); ?>">
@@ -74,7 +73,6 @@
                 </a>
             </div>
         <?php endforeach; ?>
-        </div>
     </div>
     <?php endif; ?>
     
@@ -95,14 +93,18 @@ function renderpath ($url, $path) {
         return $path;
     }
     
-    if (strstr($path, "//")) {
-        $urlParts = parse_url($url);
+    $urlParts = parse_url($url);
+        
+    if (preg_match("~^(\/\/)~", $path)) {
         return $urlParts['scheme'].':'.$path;
     }
 
-    if (preg_match("~(\/).~", $path)) {
-        $urlParts = parse_url($url);
+    if (preg_match("~^(\/)~", $path)) {
         return $urlParts['scheme'].'://'.$urlParts['host'].$path;
+    } elseif(preg_match("~(\/)~", $path)) {
+        return $urlParts['scheme'].'://'.$urlParts['host'].'/'.$path;
+    } else {
+        return $urlParts['scheme'].'://'.$urlParts['host'].'/'.$urlParts['path'].'/'.$path;
     }
 
     return $url.$path;
