--- a/application/views/scripts/model/view.phtml
+++ b/application/views/scripts/model/view.phtml
@@ -7,7 +7,7 @@
 <?php $this->model->getName(); ?>
 
 <?php echo $this->partial('model/partials/navigation.phtml', array('model' => $this->model, 'active' => 'view')); ?>
-            
+
 <?php if ($this->photosets): ?>
 <div class="row">
 
@@ -15,7 +15,7 @@
     <div class="col-xs-4 col-sm-3 col-md-2">
         <a href="<?php echo $photoset['manual_thumbnail'] ? $this->url(array('controller'=>'gallery', 'action'=>'view', 'photoset' => $photoset['id']), null, true) : $this->url(array('controller'=>'gallery', 'action'=>'thumbnail', 'photoset' => $photoset['id']), null, true); ?>" class="thumbnail">
             <div class="image <?php echo $photoset['manual_thumbnail'] ? '' : 'autothumb' ?>">
-                <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($photoset['thumbnail']))); ?>" />
+                <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($photoset['thumbnail'])), null, true); ?>" />
                 <div class="name">
                     <?php echo $photoset['name'] ;?>
                 </div>
@@ -23,7 +23,7 @@
         </a>
     </div>
     <?php endforeach; ?>
-        
+
 </div>
 <?php else: ?>
 No Photosets
