--- a/application/views/scripts/model/partials/navigation.phtml
+++ b/application/views/scripts/model/partials/navigation.phtml
@@ -8,4 +8,7 @@
     <li<?php echo $this->active == 'weburl' ? ' class="active"' : '' ?>>
         <a href="<?php echo $this->url(array('controller'=>'web-url', 'action'=>'index', 'modelid' => $this->model->ID), null, true);?>">Web URL</a>
     </li>
+    <li<?php echo $this->active == 'webcrawler' ? ' class="active"' : '' ?>>
+        <a href="<?php echo $this->url(array('controller'=>'webcrawler', 'action'=>'index', 'modelid' => $this->model->ID), null, true);?>">Webcrawler</a>
+    </li>
 </ul>
