Minor css updated and Ranking now showing web crawler dates.

--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -34,7 +34,7 @@
                             <div class="checkbox">
                                 <label>
                                 <input type="checkbox" id="search<?php echo $model['ID']; ?>" name="search"<?php echo $model['search'] ? ' checked="checked"' : ''; ?> />
-                                <i class="fa fa-search"></i> <?php echo $this->date($model['datesearched']); ?>
+                                <i class="fa fa-search"></i> <?php echo $this->date($model['webcrawler_updated']); ?>
                                 </label>
                                 
                             </div>
