--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -66,7 +66,7 @@
     <div class="col-md-12">
         <?php foreach($thumbnails as $thumbnail): ?>
             <div class="col-lg-1 col-sm-2 col-xs-3">
-                <a class="thumbnail" href="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo renderpath($url['url'], $thumbnail); ?>">
+                <a class="thumbnail small" href="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo renderpath($url['url'], $thumbnail); ?>">
                     <div class="image thumb">
                         <img src="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo renderpath($url['url'], $thumbnail); ?>&width=80" />
                     </div>
