--- a/application/views/scripts/webcrawler-url/index.phtml
+++ b/application/views/scripts/webcrawler-url/index.phtml
@@ -50,9 +50,20 @@ $this->headTitle('Web Urls');
 
             <?php
             $thumbnails = array();
-            if ($url['links']) {
+
+            if ($url['links'] && $url['domain']['link_depth'] == 1) {
                 foreach ($url['links'] as $link) {
                     $thumbnails[] = $link['url'];
+                }
+            }
+
+            if ($url['links'] && $url['domain']['link_depth'] == 2) {
+                foreach ($url['links'] as $link) {
+                    foreach ($link['url']['links'] as $links) {
+                        if (strpos($links['url']['contenttype'],'image/jpeg') !== false) {
+                            $thumbnails[] = $links['url'];
+                        }
+                    }
                 }
             }
             ?>
@@ -61,7 +72,7 @@ $this->headTitle('Web Urls');
             <div class="col-md-12">
                 <?php foreach($thumbnails as $thumbnail): ?>
                     <div class="col-lg-1 col-sm-3 col-xs-3" >
-                        <a class="thumbnail small" href="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo $thumbnail['url']; ?>">
+                        <a class="thumbnail small" href="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo $thumbnail['url']; ?>" target="_blank" title="<?php echo $thumbnail['contentlength']; ?>">
                             <div class="image thumb">
                                 <img src="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo $thumbnail['url']; ?>&width=80" />
                             </div>
