--- a/application/views/scripts/gallery/duplicate.phtml
+++ b/application/views/scripts/gallery/duplicate.phtml
@@ -92,6 +92,7 @@
                     </div>
                     <div class="actions">
                         <div class="text-center"><?php echo number_format(($image->width * $image->height / 1024 / 1024),1); ?>MP</div>
+                        <div class="text-center"><?php echo $image->width; ?> x <?php echo $image->height; ?></div>
                         <div class="text-center"><small><?php echo str_replace(',', ', ', $image->hash->hash); ?></small></div>
                         <?php if (in_array($image->id, $duplicateImages2)): ?>
                         <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'delete', 'id' => $image->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))); ?>" class="btn btn-default btn-lg" role="button"><i class="fa fa-trash-o"></i> Delete</a>
